--- a/card/src/Components/Card/Card.css
+++ b/card/src/Components/Card/Card.css
@@ -1,4 +1,11 @@
 .card__container {
     background-color: var(--bright-orange);
-    height: 100vh;
+    color: var(--very-light-gray);
+    padding: 4rem;
+}
+
+h1 {
+    font-family: 'Big Shoulders Display', cursive;;
+    font-size: 2.7rem;
+    text-transform: uppercase;
 }
