--- a/card/src/Components/Card/Card.css
+++ b/card/src/Components/Card/Card.css
@@ -1,7 +1,14 @@
 .card__container {
     background-color: var(--bright-orange);
     color: var(--very-light-gray);
+    display: flex;
+    flex-direction: column;
     padding: 4rem;
+    row-gap: 1.5rem;
+}
+
+.card__img {
+    width: 4.5rem;
 }
 
 h1 {
