--- a/card/src/Components/Card/Card.css
+++ b/card/src/Components/Card/Card.css
@@ -1,5 +1,5 @@
 .card__container {
-    background-color: var(--bright-orange);
+    /* background-color: var(--bright-orange); */
     color: var(--very-light-gray);
     display: flex;
     flex-direction: column;
