--- a/card/src/Components/Card/Card.css
+++ b/card/src/Components/Card/Card.css
@@ -1,13 +1,13 @@
 .container {
-    margin: 5rem 2rem;
+    margin: 5rem 1rem;
 }
 
 .card__container {
     color: var(--very-light-gray);
     display: flex;
     flex-direction: column;
-    padding: 4rem;
-    row-gap: 1.5rem;
+    padding: 3rem;
+    row-gap: 2.5rem;
 }
 
 .card__container:nth-child(1) {
@@ -28,4 +28,8 @@ h1 {
     font-family: 'Big Shoulders Display', cursive;;
     font-size: 2.7rem;
     text-transform: uppercase;
+}
+
+.card__container {
+    line-height: 1.8rem;
 }
