--- a/card/src/Components/Card/Card.css
+++ b/card/src/Components/Card/Card.css
@@ -1,4 +1,8 @@
 .container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 5rem 1rem;
 }
 
@@ -6,6 +10,7 @@
     color: var(--very-light-gray);
     display: flex;
     flex-direction: column;
+    max-width: 400px;
     padding: 3rem;
     row-gap: 2.5rem;
 }
@@ -28,20 +33,17 @@ h1 {
 @media screen and (min-width: 768px) {
 
     .container {
-        align-items: center;
-        display: flex;
         flex-direction: row;
         height: 100vh;
-        justify-content: center;
         margin: 0;
     }
 
     .card__container {
         flex-direction: column;
-        max-width: 300px;
+        max-width: 320px;
     }
 
     .card__text {
-        height: 172.781px;
+        height: 170px;
     }
 }
