--- a/card/src/Components/Card/Card.css
+++ b/card/src/Components/Card/Card.css
@@ -35,7 +35,7 @@ h1 {
     .container {
         flex-direction: row;
         height: 100vh;
-        margin: 0;
+        margin: 0 2rem;
     }
 
     .card__container {
@@ -45,5 +45,6 @@ h1 {
 
     .card__text {
         height: 170px;
+        min-width: 155px;
     }
 }
